--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-validator": "^6.5.0",
         "helmet": "^3.22.0",
         "jsonwebtoken": "^8.5.1",
+        "mongodb": "^4.8.0",
         "mongoose": "^6.2.10",
         "my-local-ip": "^1.0.0",
         "mysql2": "^2.1.0",
